# goit-ds-hw-03

./: README.md  abstract+.py  abstract.py  authors.json  main.py  mongo.py  pyproject.toml  quotes.json
