[tool.poetry]
name = "beautiful"
version = "0.1.0"
description = ""
authors = ["victorcoffee <106419325+victorcoffee@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
lxml = "^5.1.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
lxml = "^5.1.1"
simple-eartquake-info = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
